<package format="3">
  <name>forestry_description</name>
  <version>1.0.0</version>
  <description>URDF Description package for forestry_description. This package contains configuration data, 3D models, and launch files for the forestry_description robot.</description>
  
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- ROS 2 빌드 툴 의존성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 실행 시 의존성 -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
